--- a/src/template/@layout.latte
+++ b/src/template/@layout.latte
@@ -9,7 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	{foreach $meta AS $argumentName => $metas}
+	{foreach $meta as $argumentName => $metas}
 		<meta n:foreach="$metas as $var => $val" {$argumentName}="{$var}" content="{$val}">
 	{/foreach}
 
